# CamCapture

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md  main_test.cpp  test.cpp
include/: CwCapture.h  capture.h  v4l2utils.h
src/: CwCapture.c  capture.c  v4l2utils.c  v4l2utils.h
